refactor: rework different log format